Slurry project items pages

--- a/app/views/robotics/current/associated-works.html
+++ b/app/views/robotics/current/associated-works.html
@@ -33,7 +33,7 @@
     <fieldset class="govuk-fieldset" aria-describedby="associated-works-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
-          What eligible robotic or innovative technology does your project need?
+          What eligible items does your project need?
         </h1>
       </legend>
       <div id="project-items-hint" class="govuk-hint">
