--- a/app/views/robotics/current/energy-source.html
+++ b/app/views/robotics/current/energy-source.html
@@ -30,7 +30,7 @@
           What type of energy will you use?
         </h1>
       </legend>
-      <div id="energy-source-hint" class="govuk-hint">Select all that apply</div>
+      <div id="energy-source-hint" class="govuk-hint">Select up to 2 options</div>
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="energy-source" name="energy-source" type="checkbox" value="mains electricity" {{ checked("energy-source", "mains electricity") }}>
