--- a/app/views/robotics/current/wider-farming.html
+++ b/app/views/robotics/current/wider-farming.html
@@ -67,7 +67,7 @@ Have you already started work on the project?
     </form>
     </div>
 
-  
+
 
   <!--top right column 'Funding priorities'-->
   <div class="govuk-grid-column-one-third">
@@ -78,6 +78,7 @@ Have you already started work on the project?
         <p>RPA wants to fund projects that:
           <ul class="govuk-list govuk-list--bullet">
             <li>improve productivity</li>
+            <li>introduce innovation</li>
           </ul>
         </p>
     </div>
