--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -36,8 +36,8 @@
         <h2 class="govuk-heading-l">Design history</h2>
                   <p class='govuk-heading-m'>Version 1 (current)</p>
                     <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in 1st round of usability testing.<br>
-                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 16 August 2021<br/>
-                      # Robotics not included</span></p>
+                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 18 August 2021<br/>
+                      </span></p>
 
 
       </div>
@@ -48,7 +48,7 @@
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://app.mural.co/t/capgemini3322/m/ftfgrants4310/1626122410966/caa4e0e8f5ce5ff44c0e641edd586e81d2d457a4?sender=uac8e5181797d9857544e5168' target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
-                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 16 August 2021.<br></p>
+                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 18 August 2021.<br></p>
 
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
