--- a/app/views/slurry/current/answers.html
+++ b/app/views/slurry/current/answers.html
@@ -111,20 +111,22 @@
           <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Productivity <br/>
-              Improve the environment</p>
+              Improve productivity <br/>
+              Improve the environment<br>
+            Introduce innovation</p>
           </td>
           <td class="govuk-table__cell"><a href="projects-impact">Change</td>
         </tr>
-        {% if data['projects-impact'] === "Increase acidification" %}
+        {% if data['projects-impact'] === "Introduce acidification for the first time" %}
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Current volume treated
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['slurry-currently-treated'] | capitalize}} m<sup>3</sup></li></ul></th>
           <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Productivity <br/>
+              Improve productivity <br/>
               Improve the environment</p>
+
 
           </td>
           <td class="govuk-table__cell"><a href="slurry-currently-treated">Change</td>
@@ -136,7 +138,7 @@
           <td class="govuk-table__cell">Weak</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Productivity <br/>
+              Improve productivity<br/>
               Improve the environment</p>
           </td>
           <td class="govuk-table__cell"><a href="slurry-to-be-treated">Change</td>
