--- a/app/views/slurry/current/projects-impact.html
+++ b/app/views/slurry/current/projects-impact.html
@@ -44,14 +44,14 @@
 
                   items: [
                 {
-                  value: "Introduce acidification",
+                  value: "Introduce acidification for the first time",
                   text: "Introduce acidification for the first time",
-                  checked: checked("projects-impact", "Introduce acidification")
+                  checked: checked("projects-impact", "Introduce acidification for the first time")
                 },
                 {
-                  value: "Increase acidification",
+                  value: "Add additional acidification installations",
                   text: "Add additional acidification installations",
-                  checked: checked("projects-impact", "Increase acidification")
+                  checked: checked("projects-impact", "Add additional acidification installations")
                 }
               ]
               }) }}
