--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -31,7 +31,7 @@
 
       <p>
 
-      <li><a href="/slurry/current/guidance" class="govuk-link--no-visited-state">Project impact page</a></li>
+      <li><a href="/slurry/current/guidance" class="govuk-link--no-visited-state">Guidance page</a></li>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>The grant summary text was changed ​</li>
@@ -110,7 +110,7 @@
 
           <p class='govuk-list app-list--definition'>
             <a href='https://app.mural.co/invitation/mural/ftfgrants4310/1626122410966?sender=uac8e5181797d9857544e5168&key=0647d951-2455-4d53-839e-a946509fbd86' class="govuk-link--no-visited-state" target="new">High fidelity screenflow on Mural</a><br>
-                 Last updated on 16 August 2021.<br></p>
+                 Last updated on 18 August 2021.<br></p>
 
           <p class='govuk-list app-list--definition'>
             <a href='https://www.sketch.com/s/bc04f07a-1c5d-4173-8e97-941118e01749' class="govuk-link--no-visited-state" target="new">Sketch wireframes</a><br>
