--- a/app/views/slurry/current/farmer-details.html
+++ b/app/views/slurry/current/farmer-details.html
@@ -53,6 +53,9 @@
           <label class="govuk-label" for="farmer-landline">
               Mobile number
           </label>
+          <div id="landline-name-hint" class="govuk-hint">
+              We will only use this to contact you about your application
+          </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-landline" name="farmer-landline" type="farmer-landline" spellcheck="false" aria-describedby="farmer-landline-hint" autocomplete="farmer-landline" value="{{ data['farmer-landline'] }}">
         </div>
 
@@ -60,6 +63,9 @@
           <label class="govuk-label" for="farmer-mobile">
               Landline number
           </label>
+          <div id="landline-name-hint" class="govuk-hint">
+              We will only use this to contact you about your application
+          </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-mobile" name="farmer-mobile" type="farmer-mobile" spellcheck="false" aria-describedby="farmer-mobile-hint" autocomplete="farmer-mobile" value="{{ data['farmer-mobile'] }}">
         </div>
 
@@ -103,7 +109,7 @@
           Continue
         </button>
 
-      
+
       </form>
     </div>
   </div>
