--- a/app/views/slurry/current/remaining-costs.html
+++ b/app/views/slurry/current/remaining-costs.html
@@ -23,7 +23,7 @@ Meeting the remaining project costs
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
   {% set remainingCosts = data['project-cost'] * 0.6 %}
 
-  <h1 class="govuk-heading-l">Can you pay the remaining a costs{%if remainingCosts %} of £{{ remainingCosts | toFixed(2) | commafy }}{% endif%}?</h1>
+  <h1 class="govuk-heading-l">Can you pay the remaining costs{%if remainingCosts %} of £{{ remainingCosts | toFixed(2) | commafy }}{% endif%}?</h1>
 
   <div class="govuk-radios govuk-radios--inline">
     <div class="govuk-radios__item">
