low-emission change

--- a/app/views/slurry/current/low-emission.html
+++ b/app/views/slurry/current/low-emission.html
@@ -47,7 +47,7 @@ Have you already started work on the project?
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="low-emission-3" name="low-emission" type="radio" value="yes will use contractor" {{ checked("low-emission", "yes will use contractor") }}>
             <label class="govuk-label govuk-radios__label" for="low-emission-3">
-            Yes, I will be using a contractor
+            Yes, I will be using a contractor with low-emissions precision application equipment 
             </label>
           </div>
           <div class="govuk-radios__divider">or</div>
