Minor Slurry changes

--- a/app/views/slurry/current/acidification-infrastructure.html
+++ b/app/views/slurry/current/acidification-infrastructure.html
@@ -30,7 +30,7 @@
               </h1>
             </legend>
             <div id="acidification-infrastructure-hint" class="govuk-hint">
-              Any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage.
+              Any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage
             </div>
             <div class="govuk-radios govuk-radios">
               <div class="govuk-radios__item">
