--- a/app/views/robotics/current/associated-works.html
+++ b/app/views/robotics/current/associated-works.html
@@ -45,9 +45,9 @@
 
 <div class="govuk-checkboxes">
   <div class="govuk-checkboxes__item">
-    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Robotic or automatic harvesting equipment" {{ checked("robotic-equipment", "Robotic or automatic harvesting equipment") }}>
+    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Robotic or autonomous harvesting equipment" {{ checked("robotic-equipment", "Robotic or autonomous harvesting equipment") }}>
     <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
-      Robotic or automatic harvesting equipment
+      Robotic or autonomous harvesting equipment
     </label>
   </div>
   <div class="govuk-checkboxes">
@@ -66,9 +66,9 @@
       </div>
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Robotic milking equipment" {{ checked("robotic-equipment", "Robotic milking equipment") }}>
+          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Voluntary robotic milking equipment" {{ checked("robotic-equipment", "Voluntary robotic milking equipment") }}>
           <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
-            Robotic milking equipment
+            Voluntary robotic milking equipment
           </label>
         </div>
         <div class="govuk-checkboxes">
@@ -80,26 +80,41 @@
           </div>
           <div class="govuk-checkboxes">
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic sowing/planting equipment" {{ checked("robotic-equipment", "Robotic sowing/planting equipment") }}>
+              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic transplanting" {{ checked("robotic-equipment", "Robotic transplanting") }}>
               <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-6">
-                Robotic sowing/planting equipment
+                Robotic transplanting
               </label>
             </div>
             <div class="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Automated feeding systems" {{ checked("robotic-equipment", "Automated feeding systems") }}>
+                <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
-                  Automated feeding systems
+                  Robotic feeding systems
                 </label>
               </div>
               <div class="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="led lighting" {{ checked("robotic-equipment", "Wavelength-controlled LED lighting") }}>
+                  <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment", "Wavelength-specific LED lighting") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-                    Wavelength-controlled LED lighting
+                    Wavelength-specific LED lighting
                   </label>
                 </div>
-                </div>
+                <div class="govuk-checkboxes">
+                  <div class="govuk-checkboxes__item">
+                    <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
+                    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
+                      Robotic tractor
+                    </label>
+                  </div>
+                  <div class="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" type="checkbox" value="Other robotic equipment" {{ checked("robotic-equipment", "Other robotic equipment") }}>
+                      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-10">
+                        Other robotic equipment
+                      </label>
+                    </div>
+
+            </div>
   </fieldset>
 </div>
 
