--- a/app/views/robotics/current/project-purchase.html
+++ b/app/views/robotics/current/project-purchase.html
@@ -37,15 +37,15 @@
            <label class="govuk-label govuk-radios__label" for="project-purchase">
              Robotic equipment
            </label>
-           <div id="robotic-equipment-hint" class="govuk-hint govuk-radios__hint">Lorem ipsum hint text to follow</div>
+           <div id="robotic-equipment-hint" class="govuk-hint govuk-radios__hint">Autonomous farming equipment capable of sensing its environment, making decisions and performing actions</div>
          </div>
          <div class="govuk-radios govuk-radios">
            <div class="govuk-radios__item">
              <input class="govuk-radios__input" id="project-purchase-1" name="project-purchase" type="radio" value="enhanced automation equipment" {{ checked("project-purchase", "enhanced automation equipment") }}>
              <label class="govuk-label govuk-radios__label" for="project-purchase-1">
-               Enhanced automation equipment
+               Advanced ventilation control units
              </label>
-             <div id="Enhanced-automation-equipment-hint" class="govuk-hint govuk-radios__hint">Lorem ipsum hint text to follow</div>
+             <div id="Enhanced-automation-equipment-hint" class="govuk-hint govuk-radios__hint">System to control ventilation of existing horticultural and livestock buildings to reduce greenhouse gas emissions</div>
            </div>
          <div class="govuk-radios govuk-radios">
            <div class="govuk-radios__item">
