--- a/app/views/robotics/current/project-start.html
+++ b/app/views/robotics/current/project-start.html
@@ -35,7 +35,7 @@ Have you already started work on the project?
                       Yes, preparatory work
                     </label>
                     <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                      For example quotes from suppliers, applying for planning permission
+                      For example, quotes from suppliers, applying for planning permission
                     </div>
                   </div>
                   <div class="govuk-radios__item">
