--- a/app/views/robotics/current/remaining-costs.html
+++ b/app/views/robotics/current/remaining-costs.html
@@ -58,7 +58,7 @@ Meeting the remaining project costs
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p>
+          <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
 <p>You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme. </p>
           <a href="#">
