--- a/app/views/slurry/current/answers.html
+++ b/app/views/slurry/current/answers.html
@@ -28,7 +28,7 @@
 
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Average</h2>
-      <p>This means your project seems likely to be successful.</p>
+      <p>This means your project has a medium chance of getting funding.</p>
     </div>
 
 
