--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -28,7 +28,7 @@
 
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Average</h2>
-      <p>This means your project seems likely to be successful.</p>
+      <p>This means your project has a medium chance of getting funding.</p>
     </div>
 </div>
   </div>
@@ -91,10 +91,11 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Data analytics to improve productivity
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9"><li>{{data['wider-farming'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">Weak</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Improve productivity</p>
+              Improve productivity<br>
+            introduce innovation</p>
           </td>
           <td class="govuk-table__cell"><a href="wider-farming">Change</td>
         </tr>
@@ -108,12 +109,10 @@
             {% endfor %}
           </ul>
         </th>
-          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Improve the environment<br>
-
-                Introduce innovation</p>
+              Improve the environment</p>
           </td>
           <td class="govuk-table__cell"><a href="energy-source">Change</td>
         </tr>
@@ -121,7 +120,7 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Agricultural sector
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['agricultural-sector'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
               Improve productivity<br>
@@ -134,7 +133,7 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Technology use
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['introducing-innovation'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Strong</td>
+          <td class="govuk-table__cell">Average</td>
           <td class="govuk-table__cell">
           <p class="govuk-body govuk-!-font-size-16">
                 Introduce innovation</p>
