--- a/app/views/robotics/current/business.html
+++ b/app/views/robotics/current/business.html
@@ -32,7 +32,7 @@
           <label class="govuk-label" for="project-name">
               Project name
           </label>
-          <span id="project-name-hint" class="govuk-hint">For example, Brown Hill Farm reservoir</span>
+          <span id="project-name-hint" class="govuk-hint">For example, Browns Hill Farm robotic milking</span>
           <input class="govuk-input" id="project-name" name="project-name" type="text" value="{{ data['project-name'] }}">
         </div>
 
