--- a/app/views/robotics/current/business.html
+++ b/app/views/robotics/current/business.html
@@ -71,7 +71,7 @@
                        </h1>
                      </legend>
                      <div id="contact-hint" class="govuk-hint">
-                       Select one option
+                       If you don't have an SBI, you can still apply.<br>Select one option
                      </div>
 
                  <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -86,7 +86,7 @@
                        <label class="govuk-label" for="sbi">
                          SBI number
                        </label>
-                       <input class="govuk-input govuk-!-width-one-third" id="enter-sbi" name="enter-sbi" pattern="[0-9]*" inputmode="numeric" value="{{ data['enter-sbi'] }}"{{ checked("enter-sbi", "enter-sbi") }}></div>
+                       <input class="govuk-input govuk-!-width-one-third" id="enter-sbi2" name="enter-sbi" pattern="[0-9]*" inputmode="numeric" value="{{ data['enter-sbi'] }}"></div>
                    </div>
                    <div class="govuk-radios__item">
                      <input class="govuk-radios__input" id="sbi-no" name="sbi-radio" type="radio" value="No" data-aria-controls="conditional-contact-2" {{ checked("sbi-radio", "No") }}>
