--- a/app/views/robotics/current/wider-farming.html
+++ b/app/views/robotics/current/wider-farming.html
@@ -28,6 +28,9 @@ Have you already started work on the project?
             Will your project use data analytics to improve productivity on the farm?  
           </h1>
         </legend>
+        <div id="wider-farming" class="govuk-hint">
+          Software automating data analysis to improve efficiency
+        </div>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="wider-farming-1" name="wider-farming" type="radio" value="Yes, we have the technology already" {{ checked("wider-farming", "Yes, we have the technology already") }}>
