--- a/app/views/slurry/current/business.html
+++ b/app/views/slurry/current/business.html
@@ -70,7 +70,7 @@
                                </h1>
                              </legend>
                              <div id="contact-hint" class="govuk-hint">
-                               Select one option
+                               If you don't have an SBI, you can still apply.<br>Select one option
                              </div>
 
                          <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
