--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -27,8 +27,7 @@
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
       <li>mild acidification equipment such as acid storage, dosing equipment, mixing tank and pump </li>
-      <li>acidification infrastructure</li>
-      <li>slurry pipework </li>
+      <li>acidification infrastructure (any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage)</li>
     </ul>
 
 <h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
