--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -28,7 +28,7 @@
 
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Average</h2>
-      <p>This means your project has a medium chance of getting funding.</p>
+      <p>This means your project seems like it might be successful.</p>
     </div>
 </div>
   </div>
@@ -117,18 +117,7 @@
           <td class="govuk-table__cell"><a href="energy-source">Change</td>
         </tr>
 
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Agricultural sector
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['agricultural-sector'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Average</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve productivity<br>
-              Improve the environment<br>
-              Introduce innovation</p>
-          </td>
-          <td class="govuk-table__cell"><a href="agricultural-sector">Change</td>
-        </tr>
+
 
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Technology use
