--- a/app/views/robotics/current/project-cost.html
+++ b/app/views/robotics/current/project-cost.html
@@ -17,7 +17,13 @@
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
+
+
 {% block content %}
+
+
+
+
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -32,7 +38,8 @@
 
           <span class="govuk-caption-m">Enter amount, for example 95,000</span>
           <div class="govuk-input__wrapper govuk-!-margin-top-4">
-          <span  class="govuk-input__prefix" aria-hidden="true">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
+          <span  class="govuk-input__prefix" aria-hidden="true">£</span>
+          <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
 
           </div>
         </div>
@@ -51,15 +58,23 @@
           <span class="app-step-nav-related__pretitle">Items selected</span>
           </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
+
+
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
             {% for item in data['robotic-equipment'] %}
-            <li>
-                {{ item | capitalize }}
-            </li>
+            {% if item != 'Other robotic equipment' %}
+
+              <li>{{ item | capitalize }}</li>
+
+            {% endif %}
             {% endfor %}
+            {% if data['other-robotic-item'] %}
 
+            <li>
+              {{ data['other-robotic-item'] }} (not eligible)
+            </li>
+            {% endif %}
           </ul>
-
         </nav>
 
 
