--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -27,18 +27,24 @@
             Specialist start page, hosted on GOV.UK</p>
 
         <p class='govuk-list app-list--definition'>
-        <a href='/slurry/current/email' class="govuk-link--no-visited-state">Confirmation email</a><br>
+        <a href='/robotics/current/email' class="govuk-link--no-visited-state">Confirmation email</a><br>
           User will receive a confirmation email, with their answers. Service is routed by GOV Notify.</p>
       </div>
 
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
-                  <p class='govuk-heading-m'>Version 1 (current)</p>
-                    <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in 1st round of usability testing.<br>
-                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 20 August 2021<br/>
+                  <p class='govuk-heading-m'>Version 2 (current)</p>
+                    <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in 2nd round of usability testing.<br>
+                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 25 August 2021<br/>
                       </span></p>
 
+
+
+                          <p class='govuk-heading-m'>Previous versions</p>
+                            <p class='govuk-list app-list--definition'>
+                              <a href='/robotics/v1/guidance' class="govuk-link--no-visited-state">Version 1</a><br>
+                                Robotics baseline design, tested in our 1st round of usability testing between 15 July 2021 and 20 August 2021.</p>
 
       </div>
 
@@ -47,8 +53,8 @@
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
               <p class='govuk-list app-list--definition'>
-                <a href='https://app.mural.co/t/capgemini3322/m/ftfgrants4310/1626122410966/caa4e0e8f5ce5ff44c0e641edd586e81d2d457a4?sender=uac8e5181797d9857544e5168' target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
-                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 18 August 2021.<br></p>
+                <a href='https://app.mural.co/t/capgemini3322/m/ftfgrants4310/1626122410966/caa4e0e8f5ce5ff44c0e641edd586e81d2d457a4?sender=uac8e5181797d9857544e5168' class='govuk-link--no-visited-state' target="new">High fidelity screenflow on Mural (opens in new tab)</a><br>
+                    <img src="/public/images/mural-icon.png" alt="Mural icon" width="17" height="17"> Mural last updated on 23 August 2021.<br></p>
 
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
