--- a/app/views/slurry/current/answers.html
+++ b/app/views/slurry/current/answers.html
@@ -28,7 +28,7 @@
 
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Average</h2>
-      <p>This means your project has a medium chance of getting funding.</p>
+      <p>This means your project seems like it might be successful.</p>
     </div>
 
 
@@ -88,14 +88,7 @@
     <h1 class="govuk-heading-l">Your answers</h1>
     <p class="govuk-!-padding-bottom-4">You can go back to change scoring questions as many times as you like but you can only submit your details once.</p>
 
-
-
-
-
-
-
   <table class="govuk-table govuk-body govuk-!-font-size-16">
-
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">Answers</th>
@@ -117,7 +110,7 @@
           </td>
           <td class="govuk-table__cell"><a href="projects-impact">Change</td>
         </tr>
-        {% if data['projects-impact'] === "Introduce acidification for the first time" %}
+        {% if data['projects-impact'] === "Add additional acidification installations" %}
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Current volume treated
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet"><li>{{data['slurry-currently-treated'] | capitalize}} m<sup>3</sup></li></ul></th>
