--- a/app/views/slurry/current/reference-number.html
+++ b/app/views/slurry/current/reference-number.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Check all your answers
+  Confirmation of submitted details
 {% endblock %}
 
 {% block beforeContent %}
