--- a/app/views/robotics/current/guidance.html
+++ b/app/views/robotics/current/guidance.html
@@ -34,7 +34,7 @@
 <h3 class="govuk-heading-s">Robotics and innovation equipment </h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, egg-handling robots, advanced ventilation controls)</li>
+      <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, advanced ventilation controls)</li>
       <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
       <li>innovative LED lighting equipment (for example, wavelength-controlled LED lighting for crop and livestock production)</li>
     </ul>
@@ -53,13 +53,13 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Check if you’re eligible</td>
-      <td class="govuk-table__cell govuk-!-padding-right-1">1 July 2021</td>
-      <td class="govuk-table__cell">31 August 2021</td>
+      <td class="govuk-table__cell govuk-!-padding-right-1">1 Jan 2022</td>
+      <td class="govuk-table__cell">28 Feb 2022</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Full application</td>
-      <td class="govuk-table__cell">1 September 2021</td>
-      <td class="govuk-table__cell">30 November 2021</td>
+      <td class="govuk-table__cell">1 March 2022</td>
+      <td class="govuk-table__cell">31 May 2022</td>
     </tr>
   </tbody>
 </table>
