--- a/app/views/robotics/current/other-robotic-conditional.html
+++ b/app/views/robotics/current/other-robotic-conditional.html
@@ -22,16 +22,17 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          You may be able to apply for this grant from this scheme
+          You may be able to apply for a grant from this scheme
         </h1>
 
-        <p>RPA will assess your item and whether they will fund it.  </p>
+        <p>RPA will assess your item and whether they can fund it.</p>
+        <p>They will let you know if the item is eligible before the application window opens and projects are invited to apply.   </p>
 
         <div class="govuk-warning-text">
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
     <span class="govuk-warning-text__assistive">Warning</span>
-    There’s no guarantee your item will be funded. 
+    There’s no guarantee your item will be funded.
   </strong>
 </div>
 
