--- a/app/views/robotics/current/tenancy-length-condition.html
+++ b/app/views/robotics/current/tenancy-length-condition.html
@@ -20,7 +20,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="project-purchase" method="post">
+      <form id="mainForm" class="form" action="project-items" method="post">
       <h1 class="govuk-heading-l govuk-!-padding-bottom-5">
         You may be able to apply for a grant from this scheme
       </h1>
