--- a/app/views/robotics/current/agricultural-sector.html
+++ b/app/views/robotics/current/agricultural-sector.html
@@ -62,10 +62,23 @@ Agricultural sector
           <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">
             Continue
           </button>
-          
+          {% if data['COMPLETED'] == true %}
+            <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+              class="govuk-button govuk-button--secondary govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">Back to score
+            </button>
+          {% endif %}
 
 
           </form>
+          </div>
+
+          <div class="govuk-grid-column-one-third">
+          <div class="app-step-nav-related app-step-nav-related--singular">
+             <h2 class="app-step-nav-related__heading">
+              <span class="app-step-nav-related__pretitle">Funding priorities</span>
+              </h2>
+              <p>RPA wants to fund sectors where there is currently less use of robotics and innovative equipment.  </p>
+
           </div>
 
   </div>
